@@ -170,7 +170,7 @@ class TestVersionConstants(PloneTestCase.PloneTestCase):
             self.failUnless(PloneTestCase.PLONE30)
             self.failUnless(PloneTestCase.PLONE25)
             self.failUnless(PloneTestCase.PLONE21)
-        if PloneTestCase.PLONE40:
+        if PloneTestCase.PLONE50:
             self.failUnless(PloneTestCase.PLONE33)
             self.failUnless(PloneTestCase.PLONE32)
             self.failUnless(PloneTestCase.PLONE31)
